--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kafkajs/zstd",
-  "version": "0.1.1",
+  "name": "@emnify/kafkajs-zstd",
+  "version": "0.1.2",
   "description": "A KafkaJS codec for ZStandard compression",
   "main": "src/index.js",
   "types": "types/index.d.ts",
